spacebar to start the game

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press Space Bar to Start</h1>
   <h2 id="score-title" style="display:none;">Score: 0</h2>
   <div class="container">
     <div class="row">
